-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.895 2011-03-25 12:58:43 remko Exp $
-----------------------------------------------------------------------------------------

2011-03-25	remko
	* GMT_Chapter_4.tex:	Make clear that files with full path names will not be searched
				for in other places.
	* grdraster.txt:	Wrong order mentioned of GMT_USERDIR and GMT_DATADIR
	* grdraster_func.c:	Also look in GMT_SHAREDIR/dbase for data files.
	* gmt_io.c (GMT_get{user,data}path):	Do not look any further when full path is given.

2011-03-24	jluis
	* gmt_grdio.c:		Do more extensive tests to see if a file is in the internet 
				or is compressed and accessed via GDAL.
	* gmtapi_util.c:	Add GMT_check_url_name() function to test if file resides 
				in internet or is compressed and accessed via GDAL.

2011-03-24	remko
	* grdraster_func.c:	Exit load_rasinfo with proper error message. Skip garbled
				records instead of stop reading grdraster.info file.
				Do not exit program on empty info file when printing syntax.
	* share/doc/gmt/*:	All moved to doc/*

2011-03-23	jluis
	* gmt_grdio.c:		Do not test if file exist for files imported via GDAL and 
				that are located elsewhere on the Web (name starting by 'http'). 
				With this we can import files directly via their URL
	* gmtapi_util.c:	---"---

2011-03-22	remko
	* gmt_init.c:		Fixed erroneous way of scanning symbol option -Sm
	* gmt_plot.c:		Make sure PSL_* text/dimensions are set when plotting
				no annotation but still a plot title

2011-03-21	jluis
	* gmt_gdalread.h:	Add a new member to GDALREAD_CTRL struct to host the pointer 
				to the pre-allocated grid array.
	* gmt_gdalread.c:	Use pre-allocated *grid array if it was transmitted. Note that
				in this case there is no test if pre-allocated mem is enough.
	* gmt_customio.c:	GMT_gdal_read_grd sends in the pre-allocated *grid array.

2011-03-21	pwessel